Fixed track upload button in back-end editor: corrected width and alignment.

--- a/media/css/abp01-main.css
+++ b/media/css/abp01-main.css
@@ -243,7 +243,9 @@ a.abp01-close-editor:hover {
 }
 
 .abp01-track-selector {
-    margin-left: 264px !important;
+    width: 190px;
+    margin-left: 234px !important;
+    text-align: center;
 }
 
 .abp01-map-retry-container {
